# FdF

./: .gitignore  CMakeLists.txt  Makefile
example-maps/: elem-col.fdf
include/: fdf.h  line.h
lib/libft/src/: ft_dstrdup.c  ft_strntrim.c
src/: color.c  convert_map.c  draw_line.c  draw_line_color.c  draw_lines.c  error.c  fill_image.c  ft_atoi_p.c  ft_atoi_save.c  hooks.c  main.c  map_to_img.c  offset.c  parser.c  plot_lines.c  projections.c  scaling.c  t_2dmap.c  t_2dpoint.c  t_3dpoint.c  t_fdf.c  t_map.c  t_mappoint.c  update_screen.c
